fix(lineChart): update styles on mobile version

--- a/src/scss/components/Dashboard/_dashboard.scss
+++ b/src/scss/components/Dashboard/_dashboard.scss
@@ -280,6 +280,9 @@ $breakpoint-mobile: 600px;
 
 .checkbox-container {
   gap: 16px;
+  @media (max-width: $breakpoint-mobile) {
+    flex-direction: column;
+  }
 }
 
 .checkbox {
